# gspengine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Engine.cpp.285ADFE282F4B605.idx  Engine.h.5DBDDAAA5DC35174.idx  GraphicsManager.cpp.624EA6C9E7D6F709.idx  GraphicsManager.h.20CA414A6F479A84.idx  Types.h.F70B599968CCD194.idx  helloworld.cpp.2B14298E77B8523A.idx
assets/shaders/: shader.frag  shader.vert  shader.wgsl
demo/: helloworld.cpp
gladsources/glad_gl_core_33/: args.txt
src/: Engine.cpp  Engine.h  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  ScriptManager.cpp  ScriptManager.h  SoundManager.cpp  SoundManager.h  Types.h
src/ECS/: Component.h  Entity.h  PositionComponent.h  Registry.h  RegistryTest.cpp  SpriteComponent.h  System.h  TestECS.cpp  VelocityComponent.h
